--- a/src/comps/Alpha/alpha.css
+++ b/src/comps/Alpha/alpha.css
@@ -4,10 +4,11 @@
   text-align: center;
   font-size: 50px;
   font-weight: bold;
-  color: cornsilk;
+  color: black;
 }
 
 .grid {
+  width: 100%;
   display: grid;
   /* define number of columns in the grid.
   1fr = one column, 1fr 1fr = two equal colums, 1fr 2fr = two columns where the second column is twice a large as the first. 200px, 20%, and auto are all valid measurements along with 1fr for defining column width. */
